--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,11 +5,11 @@ html, body{
 }
 
 a {
-  color: #0e2889;
+  color: #314fb9a4;
 }
 
 a:hover {
-  color: #0e2889;
+  color: #314fb9a4;
 }
 
 section{
@@ -18,19 +18,19 @@ section{
 }
 
 .section-1 {
-	background: #0e2889;
+	background: #314fb9a4;
 }
 
 .section-2 {
-	background-color: #0e2889;
+	background-color: #314fb9a4;
 }
 
 .section-3 {
-	background-color: #0e2889;
+	background-color: #314fb9a4;
 }
 
 .section-4 {
-	background-color: #0e2889;
+	background-color: #314fb9a4;
 	padding: 0.2rem;
 }
 
@@ -43,8 +43,9 @@ a.nav-item:hover {
 }
 
 .avatar{
-	height:200px;
-	border-radius: 50%;
+	height: 200px;
+	width: 150px;
+	border-radius: 10%;
 }
 
 .intro-description{
@@ -60,7 +61,7 @@ a.nav-item:hover {
 .project-figure {
 	margin: 0 auto 1rem auto;
 	max-height: 256px;
-	max-width: 256px;
+	max-width: 120px;
 }
 
 .project-text {
@@ -69,7 +70,7 @@ a.nav-item:hover {
 
 .box {
 	background-color: transparent;
-	border: 2px solid #0e2889;
+	border: 2px solid #314fb9a4;
 }
 
 .title {
@@ -90,7 +91,7 @@ a.nav-item:hover {
 
 @media screen and (max-width: 768px) {
 	.nav-menu {
-		background-color: #0e2889;
+		background-color: #314fb9a4;
 	}
 
 	.nav-toggle:hover {
